Another fix for the x-axis overflow of the tables.
Also fixed the chapters list. It should now behave like the others (100% height to have the same height as the sibling table).

--- a/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
+++ b/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
@@ -7,6 +7,7 @@
   .chaptersList {
     flex: 1 1;
     overflow: auto;
+    height: 100%;
   }
 
   .sequencesTable {
